chore(UI): improvement and fixing styling

--- a/apps/website/mfe/src/app/pages/about-us/sections/our-mision/our-mision.component.html
+++ b/apps/website/mfe/src/app/pages/about-us/sections/our-mision/our-mision.component.html
@@ -1,5 +1,7 @@
 <div class="relative flex justify-center mb-4 lg:mb-12">
-    <div class="text-hollow text-nowrap	 bg-gradient-to-r from-primary-900 to-prmary-600 ">Our Mision</div>
+    <div
+        class="text-hollow-primary  text-nowrap  text-white bg-gradient-to-r from-primary-900 to-prmary-600 font-[700] text-[75px] lg:text-[150px]">
+        Our Mision</div>
     <div class="absolute top-1/2 flex flex-col items-center">
         <div class="text-primary-900  text-center font-medium text-2xl lg:text-5xl">Our Mision</div>
         <img loading="lazy" src="assets/images/mision.png" alt="our organizing Mision">
