--- a/libs/store/src/lib/pages/landing/components/hero-shop/hero-shop.component.html
+++ b/libs/store/src/lib/pages/landing/components/hero-shop/hero-shop.component.html
@@ -1,32 +1,32 @@
 <div class="bg-light-900">
-    <div class="flex gap-6 min-h-96 mx-auto">
+    <div class="flex gap-6 min-h-60 lg:min-h-72 mx-auto">
         <div
-            class="md:w-full bg-cover bg-bottom bg-no-repeat  bg-[url('/assets/store/bg/organize-your-home.jpg')] bg-primary-100 bg-blend-multiply rounded-lg">
-            <div class=" px-6 md:px-12 py-24   ">
+            class=" md:w-full w-full bg-cover bg-bottom bg-no-repeat  bg-[url('/assets/store/bg/organize-your-home.jpg')] bg-dark-300/25 bg-blend-multiply rounded-lg">
+            <div class=" px-6 lg:px-12 py-24   ">
                 <div class=" text-center md:text-left ">
-                    <h1 class=" text-nowrap	 uppercase text-2xl font-semibold tracking-tight  sm:text-6xl">
-                        <span
-                            class="text-primary-900 stroke-white  bg-gradient-to-b from-primary-300 to-prmary-100">Transform
+                    <h1
+                        class=" sm:text-nowrap	uppercase font-extrabold tracking-loose text-3xl md:text-4xl  lg:text-6xl">
+                        <span class="text-hollow text-transparent">Transform
                             your
                             space</span>
-                        <br><span
-                            class="text-secondary-900 stroke-white bg-gradient-to-b from-secondary-300 to-secondary-100 ">Transform
+                        <br><span class="text-tertiary-900  ">Transform
                             your life</span>
                     </h1>
                 </div>
             </div>
         </div>
         <div
-            class="md:w-96  bg-cover bg-center bg-no-repeat  bg-[url('/assets/store/bg/organize-your-play-room-home.jpg')]  bg-dark-300/15 bg-blend-multiply rounded-lg">
-            <div class=" px-2 md:px-6 py-24  ">
+            class="hidden sm:block md:w-96  bg-cover bg-center bg-no-repeat  bg-[url('/assets/store/bg/organize-your-play-room-home.jpg')]  bg-dark-300/25 bg-blend-multiply rounded-lg">
+            <div class="  px-6 lg:px-12 py-24  ">
                 <div class=" text-center md:text-left">
                     <h1
-                        class="lowercase text-2xl font-light tracking-tight text-primary-900 sm:text-6xl mb-2 stroke-white">
-                        Elegant
+                        class="lowercase font-light tracking-tight text-light-900  text-xl sm:text-2xl md:text-4xl  lg:text-6xl mb-2 ">
+                        yess!
                     </h1>
-                    <div
-                        class="bg-tertiary-900 text-2xl font-bold tracking-tight text-light-900 sm:text-4xl px-3.5 py-2.5 w-auto">
-                        products
+                    <div class="bg-tertiary-900 w-max p-2.5 ">
+                        <span
+                            class="text-hollow text-xl font-bold tracking-tight text-transparent sm:text-2xl lg:text-4xl ">
+                            products</span>
                     </div>
                     <div class="mt-4 flex items-center justify-center md:justify-start">
                         <a href="#"
