--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -3,9 +3,9 @@
     class="z-50 flex justify-center w-full p-4 border-b border-primary-300 bg-primary-900 px-4 py-3 lg:py-4">
     <cff-app-banner></cff-app-banner>
   </div>
-  <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl px-4 pt-6 lg:py-4">
+  <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl py-4  lg:py-4">
     <a [routerLink]="'/'" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img loading="lazy" src="/assets/images/logo.svg" class="h-10" alt="Clutter Free Finds Logo" />
+      <img loading="lazy" src="/assets/images/logo.svg" class="h-5 sm:h-10" alt="Clutter Free Finds Logo" />
     </a>
     <div class="flex items-center md:order-2 space-x-1 md:space-x-0 rtl:space-x-reverse">
       <a [routerLink]="['/instant-quote']" type="button"
