--- a/apps/website/mfe/src/app/pages/coming-soon/coming-soon.component.html
+++ b/apps/website/mfe/src/app/pages/coming-soon/coming-soon.component.html
@@ -7,7 +7,7 @@
                 <p class="mt-4 text-dark-600">Something amazing for you<br>Let’s find a better place for you to go.</p>
 
                 <div class="flex items-center w-full mt-6 gap-x-3 shrink-0 sm:w-auto">
-                    <a [routerLink]="['/']"
+                    <a (click)="goBack()"
                         class="flex items-center justify-center w-1/2 px-5 py-2 text-sm text-dark-900 transition-colors duration-200 bg-light-900 border rounded-lg  gap-x-2 sm:w-auto hover:bg-dark-100">
                         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
                             stroke="currentColor" class="w-5 h-5 rtl:rotate-180">
@@ -17,7 +17,7 @@
                         <span>Go back</span>
                     </a>
 
-                    <a [routerLink]="['/']"
+                    <a routerLink="/"
                         class="w-1/2 px-5 py-2 text-sm tracking-wide text-light-900 transition-colors duration-200 bg-primary-900 rounded-lg shrink-0 sm:w-auto hover:bg-dark-900">
                         Take me home
                     </a>
