--- a/libs/store/src/lib/pages/landing/components/top-products/top-products.component.html
+++ b/libs/store/src/lib/pages/landing/components/top-products/top-products.component.html
@@ -42,7 +42,7 @@
                 <div class="absolute z-20 top-1/3 w-full h-10">
                     <div class="flex flex-col space-y-2 p-4  items-end ">
                         <div *ngFor="let color of product.colors"
-                            class="h-3.5 w-3.5 lg:h-4 lg:w-4  shadow ring-2  ring-primary-600  rounded-full"
+                            class="h-3.5 w-3.5 lg:h-4 lg:w-4  shadow-xl ring-2  ring-light-900  rounded-full"
                             [style.backgroundColor]="color">
                         </div>
                     </div>
@@ -52,19 +52,29 @@
                 <div class="text-lg font-bold text-primary-900">{{product.price | currency:'KES'}}</div>
                 <div>
                     <h3 class="text-xl text-gray-700 line-clamp-2 text-clip">
-                        <a [routerLink]="product.id" (click)="setSelectedProduct(product.id)">
-                            <span aria-hidden="true" class="absolute inset-0"></span>
+                        <a [routerLink]="'product/'+product.id" (click)="setSelectedProduct(product.id)">
+                            <span aria-hidden="true" class="absolute inset-0  bottom-10"></span>
                             {{product.title}}
                         </a>
                     </h3>
                     <p class="mt-1 text-sm text-gray-500 uppercase">{{product.size}}</p>
                 </div>
                 <div>
-                    <button type="button"
-                        class="text-dark-900 border border-dark-300 bg-light-900 hover:bg-primary-600 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center ">
-                        Add to Cart
-                        <img class="ms-2 w-4 h-4" src="assets/icons/cart-add.svg" />
-                    </button>
+                    <!-- if product is in cart ? btn primary else ? btn light -->
+                    <ng-container *ngIf="product.isInCart; else notInCart">
+                        <button type="button" (click)="onAddToCart($event,product)"
+                            class="text-dark-900 border border-dark-300 bg-dark-900 hover:bg-gray-400 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center ">
+                            Add to Cart
+                            <img class="ms-2 w-4 h-4" src="assets/icons/cart-add-white.svg" />
+                        </button>
+                    </ng-container>
+                    <ng-template #notInCart>
+                        <button type="button" (click)="onAddToCart($event,product)"
+                            class="text-dark-900 border border-dark-300 bg-light-900 hover:bg-gray-100 focus:ring-4 focus:outline-none focus:ring-gray-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center ">
+                            Add to Cart
+                            <img class="ms-2 w-4 h-4" src="assets/icons/cart-add.svg" />
+                        </button>
+                    </ng-template>
                 </div>
 
             </div>
