--- a/libs/store/src/lib/pages/landing/landing.component.html
+++ b/libs/store/src/lib/pages/landing/landing.component.html
@@ -1,4 +1,4 @@
-<div class="mx-auto max-w-screen-2xl">
+<div class="mx-auto max-w-screen-2xl z-10">
     <div class="w-full px-4 lg:px-12">
         <cff-store-hero-shop></cff-store-hero-shop>
         <cff-store-shop-features></cff-store-shop-features>
