--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -3,25 +3,32 @@
     class="z-50 flex justify-center w-full p-4 border-b border-primary-300 bg-primary-900 px-4 py-3 lg:py-4">
     <cff-app-banner></cff-app-banner>
   </div>
-  <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl py-4  lg:py-4">
-    <a [routerLink]="'/'" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img loading="lazy" src="/assets/images/logo.svg" class="h-5 sm:h-10" alt="Clutter Free Finds Logo" />
-    </a>
+  <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl px-4 lg:px-2 py-4  lg:py-4">
+    <div class="flex items-center space-x-1 md:space-x-0 rtl:space-x-reverse">
+      <button data-collapse-toggle="mega-menu-full" type="button"
+        class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-dark-600 rounded-lg md:hidden hover:bg-primary-100"
+        aria-controls="mega-menu-full" aria-expanded="false">
+        <span class="sr-only">Open main menu</span>
+        <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
+          <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+            d="M1 1h15M1 7h15M1 13h15" />
+        </svg>
+      </button>
+      <a [routerLink]="'/'" class="flex items-center space-x-3 rtl:space-x-reverse">
+        <img loading="lazy" src="/assets/images/logo.svg" class="h-5 sm:h-10" alt="Clutter Free Finds Logo" />
+      </a>
+    </div>
     <div class="flex items-center md:order-2 space-x-1 md:space-x-0 rtl:space-x-reverse">
+      <a [routerLink]="['/store/cart']" type="button"
+        class="inline-flex items-center font-medium justify-center p-2 me-2  text-sm bg-primary-100 text-light-900 rounded-lg cursor-pointer hover:bg-dark-300">
+        <img src="/assets/store/icons/shop-cart.svg" alt="shop for organizing products" class="w-5 h-5">
+      </a>
       <a [routerLink]="['/instant-quote']" type="button"
-        class="inline-flex items-center font-medium justify-center px-4 py-2 md:py-4 text-sm bg-primary-900 text-light-900 rounded-lg cursor-pointer hover:bg-dark-900">
+        class="inline-flex items-center font-medium justify-center px-4 py-2  text-sm bg-primary-900 text-light-900 rounded-lg cursor-pointer hover:bg-dark-900">
         Get started
       </a>
     </div>
-    <button data-collapse-toggle="mega-menu-full" type="button"
-      class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-dark-600 rounded-lg md:hidden hover:bg-primary-100 focus:outline-none focus:ring-2 focus:ring-dark-200"
-      aria-controls="mega-menu-full" aria-expanded="false">
-      <span class="sr-only">Open main menu</span>
-      <svg class="w-5 h-5" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 17 14">
-        <path stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-          d="M1 1h15M1 7h15M1 13h15" />
-      </svg>
-    </button>
+
     <div id="mega-menu-full"
       class="items-center justify-between font-medium hidden w-full md:flex md:w-auto md:order-1">
       <ul
