chore: show products and add to cart

--- a/libs/store/src/lib/pages/landing/components/hero-shop/hero-shop.component.html
+++ b/libs/store/src/lib/pages/landing/components/hero-shop/hero-shop.component.html
@@ -1,7 +1,7 @@
 <div class="bg-light-900">
-    <div class="flex gap-6 min-h-60 lg:min-h-72 mx-auto">
+    <div class="flex gap-6 min-h-60 lg:min-h-96 mx-auto">
         <div
-            class=" md:w-full w-full bg-cover bg-bottom bg-no-repeat  bg-[url('/assets/store/bg/organize-your-home.jpg')] bg-dark-300/25 bg-blend-multiply rounded-lg">
+            class=" md:w-full w-full bg-cover bg-center bg-no-repeat  bg-[url('/assets/store/bg/organize-your-play-room-home.jpeg')] bg-dark-300/25 bg-blend-multiply rounded-lg">
             <div class=" px-6 lg:px-12 py-24   ">
                 <div class=" text-center md:text-left ">
                     <h1
@@ -16,7 +16,7 @@
             </div>
         </div>
         <div
-            class="hidden sm:block md:w-96  bg-cover bg-center bg-no-repeat  bg-[url('/assets/store/bg/organize-your-play-room-home.jpg')]  bg-dark-300/25 bg-blend-multiply rounded-lg">
+            class="hidden sm:block md:w-96  bg-cover bg-center bg-no-repeat  bg-[url('/assets/store/bg/organize-elegant-product.jpeg')]  bg-dark-300/25 bg-blend-multiply rounded-lg">
             <div class="  px-6 lg:px-12 py-24  ">
                 <div class=" text-center md:text-left">
                     <h1
