--- a/libs/shared/header/src/lib/header/header.component.html
+++ b/libs/shared/header/src/lib/header/header.component.html
@@ -4,7 +4,7 @@
     <cff-app-banner></cff-app-banner>
   </div>
   <div class="flex flex-wrap justify-between items-center mx-auto max-w-screen-xl px-4 lg:px-2 py-4  lg:py-4">
-    <div class="flex items-center space-x-1 md:space-x-0 rtl:space-x-reverse">
+    <div class="flex items-center space-x-1 md:space-x-0">
       <button data-collapse-toggle="mega-menu-full" type="button"
         class="inline-flex items-center p-2 w-10 h-10 justify-center text-sm text-dark-600 rounded-lg md:hidden hover:bg-primary-100"
         aria-controls="mega-menu-full" aria-expanded="false">
