--- a/libs/store/src/lib/pages/landing/components/shop-features/shop-features.component.html
+++ b/libs/store/src/lib/pages/landing/components/shop-features/shop-features.component.html
@@ -1,9 +1,9 @@
 <main class="relative flex flex-col justify-center  overflow-hidden">
     <div class="w-full  max-w-screen-2xl mx-auto px-4 md:px-6 py-8">
         <div
-            class=" animate-infinite-scroll hover:paused w-full inline-flex flex-nowrap overflow-hidden [mask-image:_linear-gradient(to_right,transparent_0,_purple_128px,_purple_calc(100%-200px),transparent_100%)]">
+            class=" w-full inline-flex flex-nowrap overflow-hidden [mask-image:_linear-gradient(to_right,transparent_0,_purple_128px,_purple_calc(100%-200px),transparent_100%)]">
             <ul #listElementRef
-                class="flex  items-center justify-center md:justify-start [&_li]:mx-2 [&_img]:max-w-none">
+                class="flex  items-center justify-center md:justify-start [&_li]:mx-2 [&_img]:max-w-none animate-infinite-scroll">
                 <li *ngFor="let feature of features"
                     class="bg-gray-100 rounded-lg p-4 flex gap-2 items-center min-w-max min-h-[80px]">
                     <div class="flex h-10 w-10 items-center justify-center rounded-lg bg-primary-100">
