--- a/libs/store/src/lib/pages/landing/components/filters/filters.component.html
+++ b/libs/store/src/lib/pages/landing/components/filters/filters.component.html
@@ -11,7 +11,7 @@
         </div>
         <button type="submit"
             class="p-2.5 ms-2 text-sm font-medium text-white bg-primary-100 rounded-lg border border-primary-600 hover:bg-primary-300 focus:ring-4 focus:outline-none focus:ring-primary-300">
-            <img class="w-5 h-5" src="assets/icons/loader.svg" alt="kenya home organizer" /> <span
+            <img class="w-5 h-5" src="assets/videos/loader.gif" alt="kenya home organizer" /> <span
                 class="sr-only">Search</span>
         </button>
     </form>
